# jackpot

./: .gitignore  Cargo.toml  LICENSE  README.md  ck.crs  storage_table.py
benches/: aggregate_bench.rs  benchmark.rs  get_ticket_bench.rs  keygen_bench.rs  participate_bench.rs  preprocess_bench.rs  verify_bench.rs  verify_key_bench.rs
src/: lib.rs  lotteryscheme.rs  main.rs  vectorcommitment.rs
src/lotteryscheme/: bls_hash.rs  jack.rs  jack_pre.rs  vcbased.rs
src/vectorcommitment/: kzg.rs
src/vectorcommitment/kzg/: kzg_fk_open.rs  kzg_types.rs  kzg_utils.rs
